tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_type_mismatch_int32_to_int8.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:int8 = 5
x <- 200

